Fix #6 - Implement an MVP runner.